Aplicando testes
